//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table activity {
  instanceId BigInt [pk]
  raidHash BigInt [not null]
  flawless Boolean
  completed Boolean [not null]
  fresh Boolean
  playerCount Int [not null]
  dateStarted DateTime [not null]
  dateCompleted DateTime [not null]
  platformType Int [not null]
  raidDefintion raid_definition [not null]
  activityLeaderboardEntry activity_leaderboard_entry [not null]
  playerActivity player_activity [not null]
}

Table player {
  membershipId BigInt [pk]
  membershipType Int
  iconPath String
  displayName String
  bungieGlobalDisplayName String
  bungieGlobalDisplayNameCode String
  lastSeen DateTime [not null]
  clears Int [not null, default: 0]
  playerActivities player_activity [not null]
  clearCounts clear_count [not null]

  Note: 'This model contains an expression index which requires additional setup for migrations. Visit https://pris.ly/d/expression-indexes for more info.'
}

Table player_activity {
  instanceId BigInt [not null]
  membershipId BigInt [not null]
  finishedRaid Boolean [not null]
  kills Int [not null, default: 0]
  assists Int [not null, default: 0]
  deaths Int [not null, default: 0]
  timePlayedSeconds Int [not null, default: 0]
  classHash BigInt
  activity activity [not null]
  player player [not null]

  indexes {
    (instanceId, membershipId) [pk]
  }
}

Table clear_count {
  membershipId BigInt [not null]
  count Int [not null]
  raidId Int [not null]
  raid raid [not null]
  player player [not null]

  indexes {
    (membershipId, raidId) [unique]
  }
}

Table leaderboard {
  id String [pk]
  entries activity_leaderboard_entry [not null]
}

Table activity_leaderboard_entry {
  rank Int [not null]
  leaderboardId String [not null]
  instanceId BigInt [not null]
  activity activity [not null]
  leaderboard leaderboard [not null]

  indexes {
    (rank, leaderboardId) [pk]
  }
}

Table raid {
  id Int [pk, increment]
  name String [not null]
  clears clear_count [not null]
  AssociatedRaidVersions raid_version [not null]
  RaidDefintion raid_definition [not null]
}

Table raid_version {
  id Int [pk, increment]
  name String [not null]
  RaidDefintion raid_definition [not null]
  associatedRaidId Int
  associatedRaid raid
}

Table raid_definition {
  raidHash BigInt [pk]
  raidId Int [not null]
  raidVersionId Int [not null]
  raid raid [not null]
  version raid_version [not null]
  activities activity [not null]
}

Ref: activity.raidHash > raid_definition.raidHash [delete: No Action]

Ref: player_activity.instanceId > activity.instanceId [delete: Cascade]

Ref: player_activity.membershipId > player.membershipId [delete: Cascade]

Ref: clear_count.raidId > raid.id [delete: Restrict]

Ref: clear_count.membershipId > player.membershipId [delete: Cascade]

Ref: activity_leaderboard_entry.instanceId > activity.instanceId [delete: No Action]

Ref: activity_leaderboard_entry.leaderboardId > leaderboard.id [delete: Cascade]

Ref: raid_version.associatedRaidId > raid.id

Ref: raid_definition.raidId > raid.id

Ref: raid_definition.raidVersionId > raid_version.id